# r2sleigh

./: .gitignore  AGENTS.md  Agent.md  BUILDING.md  CONTRIBUTING.md  Cargo.toml  DEVELOPERS.md  README.md  ROADMAP.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/r2dec/: Cargo.toml
crates/r2dec/src/: address.rs  ast.rs  codegen.rs  expr.rs  fold.rs  lib.rs  normalize.rs  post_rename.rs  region.rs  registers.rs  structure.rs  types.rs  variable.rs
crates/r2dec/src/analysis/: flag_info.rs  lower.rs  mod.rs  predicate.rs  stack_info.rs  use_info.rs  utils.rs
crates/r2dec/src/fold/: arch.rs  context.rs  flags.rs  mod.rs  op_lower.rs  stack.rs
crates/r2dec/src/fold/op_lower/: aliases.rs  calls.rs  lowering.rs  memory_renderer.rs  mod.rs  return_resolver.rs  returns.rs
crates/r2dec/src/fold/tests/: README.md  flags.rs  helpers.rs  lowering.rs  mod.rs  pipeline.rs  returns.rs  stack.rs
crates/r2il/: Cargo.toml
crates/r2il/src/: endianness.rs  lib.rs  memory.rs  metadata.rs  opcode.rs  regname.rs  serialize.rs  space.rs  validate.rs  varnode.rs
crates/r2sleigh-cli/: Cargo.toml
crates/r2sleigh-cli/src/: main.rs
crates/r2sleigh-export/: Cargo.toml
crates/r2sleigh-export/src/: lib.rs
crates/r2sleigh-lift/: Cargo.toml
crates/r2sleigh-lift/src/: context.rs  disasm.rs  esil.rs  lib.rs  pcode.rs  sleigh.rs  translate.rs  userops.rs
crates/r2ssa/: Cargo.toml
crates/r2ssa/src/: block.rs  cfg.rs  defuse.rs  domtree.rs  function.rs  lib.rs  naming.rs  op.rs  optimize.rs  phi.rs  rename.rs  taint.rs  var.rs
crates/r2ssa/tests/: integration.rs
crates/r2sym/: Cargo.toml
crates/r2sym/examples/: solve_c_like.rs
crates/r2sym/src/: executor.rs  lib.rs  memory.rs  path.rs  r2api.rs  sim.rs  solver.rs  state.rs  value.rs
crates/r2sym/tests/: symex_integration.rs
crates/r2types/: Cargo.toml
crates/r2types/data/signatures/: libc.v1.json  posix.v1.json  win32.v1.json
crates/r2types/src/: constraint.rs  context.rs  convert.rs  external.rs  facts.rs  inference.rs  lattice.rs  lib.rs  model.rs  oracle.rs  signature.rs  solver.rs  writeback.rs
doc/: decompiler.md  esil.md  plugin.md  r2il.md  ssa.md  symex.md  taint.md  testing.md  types.md
docs/: TECHNICAL.md
r2plugin/: Cargo.toml  Makefile  arch_sleigh.c  r2sleigh_plugin.h  r_anal_sleigh.c
r2plugin/src/: blocks.rs  context.rs  decompiler.rs  helpers.rs  lib.rs  types.rs
r2plugin/src/analysis/: cfg.rs  mod.rs  ssa.rs  sym.rs  taint.rs
scripts/: bench_semantic_metadata.py  install-hooks.sh  setup-runner.sh
scripts/hooks/: pre-commit
tests/e2e/: Cargo.toml  README.md  integration_tests.rs  lib.rs  main.rs  run_all_tests.sh  run_e2e_tests.sh  stress_test  stress_test.c  stress_test_opt  sym_test.c  test_e2e.rs  test_func.c  vuln_test  vuln_test.c
tests/e2e/.cargo/: config.toml
tests/r2r/: Makefile
tests/r2r/db/extras/: r2sleigh_core  r2sleigh_decompiler_snapshots  r2sleigh_integration_extended  r2sleigh_integration_fast  r2sleigh_signature_snapshots
tests/r2r/db/wip/: r2sleigh_regression_watch
