[package]
name = "r2sleigh-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "C-ABI plugin for radare2 integration"

[lib]
crate-type = ["cdylib"]

[dependencies]
r2il = { path = "../crates/r2il" }
r2sleigh-lift = { path = "../crates/r2sleigh-lift" }
r2ssa = { path = "../crates/r2ssa" }
r2sym = { path = "../crates/r2sym" }
r2types = { path = "../crates/r2types" }
r2dec = { path = "../crates/r2dec" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
z3 = "0.19.7"

[dependencies.sleigh-config]
version = "1.0"
optional = true

[features]
default = ["x86"]
x86 = ["sleigh-config/x86"]
arm = ["sleigh-config/ARM"]
all-archs = ["x86", "arm"]
