[package]
name = "r2dec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native decompiler for r2sleigh"

[dependencies]
r2il = { path = "../r2il" }
r2ssa = { path = "../r2ssa" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
sleigh-config = { version = "1.0", features = ["x86"] }

[features]
default = []
