[package]
name = "r2dec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native decompiler for r2sleigh"

[dependencies]
r2il = { path = "../r2il" }
r2ssa = { path = "../r2ssa" }
r2types = { path = "../r2types" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
sleigh-config = { version = "1.0", features = ["x86"] }
serde_json.workspace = true

[features]
default = []
