[package]
name = "r2il"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Intermediate Language types for r2sleigh"

[dependencies]
serde.workspace = true
postcard.workspace = true
thiserror.workspace = true
bincode = { version = "3.0", optional = true }

[dev-dependencies]
serde_json.workspace = true

[features]
default = []
legacy-bincode = ["dep:bincode"]
