[package]
name = "r2sleigh-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI tool for compiling Sleigh specs to r2il"

[[bin]]
name = "r2sleigh"
path = "src/main.rs"

[dependencies]
r2il = { path = "../r2il" }
r2sleigh-lift = { path = "../r2sleigh-lift" }
r2sleigh-export = { path = "../r2sleigh-export" }
clap.workspace = true
thiserror.workspace = true
hex = "0.4"
serde_json = "1"

[features]
default = []
# Enable specific architecture support for disasm command
x86 = ["sleigh-config/x86"]
arm = ["sleigh-config/ARM"]
mips = ["sleigh-config/MIPS"]
all-archs = ["x86", "arm", "mips"]

[dependencies.sleigh-config]
version = "1.0"
optional = true
