[package]
name = "r2sleigh-export"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified instruction export pipeline for r2sleigh"

[dependencies]
r2il = { path = "../r2il" }
r2sleigh-lift = { path = "../r2sleigh-lift" }
r2ssa = { path = "../r2ssa" }
r2dec = { path = "../r2dec" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
hex = "0.4"
sleigh-config = { workspace = true, features = ["x86"] }

[features]
default = []
x86 = ["sleigh-config/x86"]
arm = ["sleigh-config/ARM"]
riscv = ["sleigh-config/RISCV"]
