[package]
name = "r2sym"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Symbolic execution engine for r2sleigh"

[dependencies]
r2il = { path = "../r2il" }
r2ssa = { path = "../r2ssa" }
serde.workspace = true
thiserror.workspace = true
z3 = "0.19.9"
r2pipe = { version = "0.7", optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = []
r2 = ["r2pipe", "serde_json"]

[dev-dependencies]
sleigh-config = { version = "1.0", features = ["x86"] }