[package]
name = "r2types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Constraint-based type inference primitives for r2sleigh"

[dependencies]
r2ssa = { path = "../r2ssa" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[features]
default = []
