[package]
name = "r2sleigh-e2e-tests"
version = "0.1.0"
edition = "2024"

[lib]
name = "e2e"
path = "lib.rs"

[[test]]
name = "integration"
path = "integration_tests.rs"

[workspace]

[dependencies]
libloading = "0.8"
r2il = { path = "../../crates/r2il" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
rstest = "0.25"
